8244508: JFR: FlightRecorderOptions reset date format

Reviewed-by: mgronlun